--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>No Dots – Mini Advent Game</title>
+  <title>No Dots – Swipe Advent Game</title>
 
-  <!-- Festive Calligraphy Font (like your puzzle app) -->
+  <!-- Festive Calligraphy Font -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -44,7 +42,7 @@
       text-shadow: 0 0 4px rgba(255,255,255,0.7);
     }
 
-    /* Snowflakes (like your other game) */
+    /* Snowflakes */
     .snowflake {
       position: fixed;
       top: -10px;
@@ -55,9 +53,7 @@
       pointer-events: none;
       z-index: 1000;
     }
-    @keyframes fall {
-      to { transform: translateY(110vh); }
-    }
+    @keyframes fall { to { transform: translateY(110vh); } }
 
     /* Info bar */
     #infoBar {
@@ -66,6 +62,8 @@
       gap: 12px;
       align-items: center;
       font-size: 16px;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
     .miniLabel {
@@ -83,15 +81,28 @@
       color: #555;
     }
 
-    #nextColorDisplay {
-      width: 22px;
-      height: 22px;
-      border-radius: 6px;
-      border: 2px solid rgba(0,0,0,0.15);
-      background: #ccc;
+    #nextPiece {
+      display: flex;
+      gap: 4px;
     }
 
-    /* Game frame */
+    .miniColor {
+      width: 20px;
+      height: 20px;
+      border-radius: 6px;
+      border: 2px solid rgba(0,0,0,0.1);
+      background: #ccc;
+      transform-origin: center;
+      animation: piecePop 0.25s ease-out;
+    }
+
+    @keyframes piecePop {
+      0% { transform: scale(0.4); opacity: 0; }
+      70% { transform: scale(1.15); opacity: 1; }
+      100% { transform: scale(1); }
+    }
+
+    /* Frame */
     #frame {
       padding: 16px;
       border: 8px solid #b30000;
@@ -105,44 +116,63 @@
       max-width: 95vw;
     }
 
-    /* 5x5 board */
+    /* Board */
     #board {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       gap: 6px;
       width: min(90vw, 320px);
       height: min(90vw, 320px);
-      touch-action: manipulation;
+      touch-action: none; /* important for pointer events & swiping */
     }
 
     .cell {
       border-radius: 12px;
-      background: #dcdcdc; /* empty cell */
+      background: #dcdcdc;
       box-shadow: inset 0 0 0 1px rgba(255,255,255,0.8),
                   0 1px 2px rgba(0,0,0,0.2);
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: background 0.18s ease, transform 0.08s ease;
+      position: relative;
       cursor: pointer;
+      overflow: hidden;
+      transition: background 0.2s ease, transform 0.08s ease;
     }
+
+    .cell:active { transform: scale(0.96); }
 
     .cell.filled {
       box-shadow:
         inset 0 0 0 1px rgba(255,255,255,0.85),
         0 2px 4px rgba(0,0,0,0.3);
+      animation: cellAppear 0.22s ease-out;
     }
 
-    .cell:active {
-      transform: scale(0.96);
+    @keyframes cellAppear {
+      0% { transform: scale(0.4); opacity: 0; }
+      70% { transform: scale(1.1); opacity: 1; }
+      100% { transform: scale(1); opacity: 1; }
     }
 
-    .cell.disabled {
-      cursor: default;
-      opacity: 0.6;
+    .cell.disabled { cursor: default; opacity: 0.6; }
+
+    .score-pop {
+      position: absolute;
+      font-size: 14px;
+      font-weight: 700;
+      color: #ffffff;
+      text-shadow: 0 0 5px rgba(0,0,0,0.7);
+      animation: riseFade 0.6s ease-out forwards;
+      pointer-events: none;
     }
 
-    /* Game over / message */
+    @keyframes riseFade {
+      0% { transform: translateY(0); opacity: 1; }
+      100% { transform: translateY(-20px); opacity: 0; }
+    }
+
+    /* Message / button */
     #message {
       margin-top: 14px;
       text-align: center;
@@ -163,12 +193,8 @@
       box-shadow: 0 3px 8px rgba(0,0,0,0.25);
       transition: background 0.2s ease, transform 0.08s ease;
     }
-    #restartBtn:active {
-      transform: translateY(1px) scale(0.98);
-    }
-    #restartBtn:hover {
-      background: #d00000;
-    }
+    #restartBtn:active { transform: translateY(1px) scale(0.98); }
+    #restartBtn:hover { background: #d00000; }
 
     @media (max-width: 480px) {
       h1 { font-size: 2.3rem; }
@@ -179,7 +205,7 @@
 <body>
 
   <h1>Felice Adventskalender</h1>
-  <h2>No Dots Mini-Spiel 🎄</h2>
+  <h2>No Dots Swipe-Spiel 🎄</h2>
 
   <div id="infoBar">
     <div class="miniLabel">
@@ -188,8 +214,8 @@
     </div>
 
     <div class="miniLabel">
-      <span class="miniLabel-title">Nächste Farbe:</span>
-      <div id="nextColorDisplay"></div>
+      <span class="miniLabel-title">Aktueller Zug:</span>
+      <div id="nextPiece"></div>
     </div>
   </div>
 
@@ -214,17 +240,16 @@
 
   <script>
     // =========================
-    // GAME LOGIC
+    // GAME SETUP
     // =========================
 
-    const size = 5;            // 5x5 board
+    const size = 5;
     const boardEl = document.getElementById("board");
     const scoreEl = document.getElementById("score");
-    const nextColorEl = document.getElementById("nextColorDisplay");
+    const nextPieceEl = document.getElementById("nextPiece");
     const messageEl = document.getElementById("message");
     const restartBtn = document.getElementById("restartBtn");
 
-    // Nice, bright colours
     const COLORS = [
       "#e74c3c", // red
       "#f1c40f", // yellow
@@ -233,11 +258,15 @@
       "#9b59b6"  // purple
     ];
 
-    let cells = [];
     let board = [];
-    let nextColor = null;
+    let cells = [];
     let score = 0;
     let gameOver = false;
+
+    // Current piece: array of colors, length 1–4
+    let currentPiece = [];
+    let dragging = false;
+    let dragPath = []; // indices on board
 
     function initGame() {
       board = Array(size * size).fill(null);
@@ -248,19 +277,21 @@
       messageEl.textContent = "";
       gameOver = false;
 
-      // Build board
+      // Build DOM cells
       for (let i = 0; i < size * size; i++) {
         const cell = document.createElement("div");
         cell.className = "cell";
         cell.dataset.index = i;
-        cell.addEventListener("click", handleCellClick);
         boardEl.appendChild(cell);
         cells.push(cell);
       }
 
-      // Choose initial next color
-      nextColor = randomColor();
-      updateNextColorDisplay();
+      // Pointer events for swiping
+      boardEl.addEventListener("pointerdown", onPointerDown);
+      boardEl.addEventListener("pointermove", onPointerMove);
+      window.addEventListener("pointerup", onPointerUp);
+
+      createNewPiece();
       renderBoard();
     }
 
@@ -269,67 +300,29 @@
       return COLORS[idx];
     }
 
-    function updateNextColorDisplay() {
-      nextColorEl.style.background = nextColor || "#ccc";
+    function createNewPiece() {
+      const length = 1 + Math.floor(Math.random() * 4); // 1–4
+      currentPiece = [];
+      for (let i = 0; i < length; i++) {
+        currentPiece.push(randomColor());
+      }
+      renderNextPiece();
     }
 
-    function handleCellClick(e) {
-      if (gameOver) return;
-
-      const index = parseInt(e.currentTarget.dataset.index, 10);
-
-      // Only place on empty cell
-      if (board[index] !== null) return;
-
-      // Place the next color
-      board[index] = nextColor;
-
-      // After placing, choose the new "next" colour
-      nextColor = randomColor();
-      updateNextColorDisplay();
-
-      // Check for groups of 3+ same-color tiles
-      const groups = findMatchingGroups();
-
-      let removedCount = 0;
-      if (groups.length > 0) {
-        // Remove the tiles from all groups
-        groups.forEach(group => {
-          group.forEach(i => {
-            if (board[i] !== null) {
-              board[i] = null;
-              removedCount++;
-            }
-          });
-        });
-
-        // Score: each removed tile = 5 points
-        if (removedCount > 0) {
-          score += removedCount * 5;
-          scoreEl.textContent = score.toString();
-        }
-      }
-
-      renderBoard();
-
-      // Check for end of game: if no empty cells left
-      if (board.every(cell => cell !== null)) {
-        gameOver = true;
-        messageEl.textContent = "Keine Züge mehr! 🎁";
-        // Optional: vibrate on game over
-        if (navigator.vibrate) navigator.vibrate(120);
-        disableBoard();
-      }
-    }
-
-    function disableBoard() {
-      cells.forEach(c => c.classList.add("disabled"));
+    function renderNextPiece() {
+      nextPieceEl.innerHTML = "";
+      currentPiece.forEach(color => {
+        const mini = document.createElement("div");
+        mini.className = "miniColor";
+        mini.style.background = color;
+        nextPieceEl.appendChild(mini);
+      });
     }
 
     function renderBoard() {
       for (let i = 0; i < board.length; i++) {
-        const color = board[i];
         const cell = cells[i];
+        const color = board[i];
 
         if (color === null) {
           cell.style.background = "#dcdcdc";
@@ -341,7 +334,142 @@
       }
     }
 
-    // Find all groups of size >= 3 of the same colour (4-directionally connected)
+    // =========================
+    // SWIPE / PLACEMENT LOGIC
+    // =========================
+
+    function getCellIndexFromEvent(ev) {
+      const target = ev.target.closest(".cell");
+      if (!target) return null;
+      return parseInt(target.dataset.index, 10);
+    }
+
+    function areNeighbors(a, b) {
+      const ar = Math.floor(a / size);
+      const ac = a % size;
+      const br = Math.floor(b / size);
+      const bc = b % size;
+      const dr = Math.abs(ar - br);
+      const dc = Math.abs(ac - bc);
+      // No diagonals, must share an edge
+      return (dr + dc === 1);
+    }
+
+    function onPointerDown(ev) {
+      if (gameOver || currentPiece.length === 0) return;
+
+      const index = getCellIndexFromEvent(ev);
+      if (index === null) return;
+      if (board[index] !== null) return; // must start on empty
+
+      dragging = true;
+      dragPath = [index];
+
+      // Place first colour of current piece
+      placeColorAtIndex(index, currentPiece[0]);
+
+      ev.preventDefault();
+    }
+
+    function onPointerMove(ev) {
+      if (!dragging || gameOver) return;
+
+      const index = getCellIndexFromEvent(ev);
+      if (index === null) return;
+
+      const lastIndex = dragPath[dragPath.length - 1];
+
+      // Only extend path if:
+      // - we haven't used this index yet
+      // - it's a neighbour of the last
+      // - board is empty at that index
+      // - we still have colours left in the piece
+      if (
+        index !== lastIndex &&
+        dragPath.indexOf(index) === -1 &&
+        areNeighbors(lastIndex, index) &&
+        board[index] === null &&
+        dragPath.length < currentPiece.length
+      ) {
+        dragPath.push(index);
+        const colorToPlace = currentPiece[dragPath.length - 1]; // order matters
+        placeColorAtIndex(index, colorToPlace);
+      }
+
+      ev.preventDefault();
+    }
+
+    function onPointerUp(ev) {
+      if (!dragging) return;
+      dragging = false;
+
+      // After placing at least one tile, resolve matches
+      if (dragPath.length > 0) {
+        resolveMatchesAndScore();
+        // New piece for next round
+        createNewPiece();
+        checkGameOver();
+      }
+
+      dragPath = [];
+    }
+
+    function placeColorAtIndex(index, color) {
+      board[index] = color;
+      const cell = cells[index];
+      cell.style.background = color;
+      cell.classList.add("filled");
+    }
+
+    // =========================
+    // MATCHING & SCORING (NxN)
+    // =========================
+
+    function resolveMatchesAndScore() {
+      const groups = findMatchingGroups();
+      if (groups.length === 0) {
+        renderBoard();
+        return;
+      }
+
+      // Determine all indices to remove and N = total removed
+      const toRemoveSet = new Set();
+      groups.forEach(group => {
+        group.forEach(i => toRemoveSet.add(i));
+      });
+
+      const removedIndices = Array.from(toRemoveSet);
+      const N = removedIndices.length;
+
+      if (N === 0) return;
+
+      // Score = N * N
+      const pointsThisTurn = N * N;
+      score += pointsThisTurn;
+      scoreEl.textContent = score.toString();
+
+      // Show +N on each removed cell and then clear them
+      removedIndices.forEach(i => {
+        const cell = cells[i];
+        // Score pop label
+        const label = document.createElement("div");
+        label.className = "score-pop";
+        label.textContent = "+" + N;
+        cell.appendChild(label);
+      });
+
+      // After short delay, remove blocks
+      setTimeout(() => {
+        removedIndices.forEach(i => {
+          board[i] = null;
+          const cell = cells[i];
+          cell.innerHTML = ""; // remove labels
+        });
+        renderBoard();
+      }, 550);
+    }
+
+    // Find all groups of size ≥ 3 with same colour (4-directionally connected)
     function findMatchingGroups() {
       const visited = Array(board.length).fill(false);
       const groups = [];
@@ -358,7 +486,6 @@
           const color = board[startIdx];
           if (color === null) continue;
 
-          // BFS/DFS for this colour
           const stack = [startIdx];
           const component = [];
           visited[startIdx] = true;
@@ -366,14 +493,14 @@
           while (stack.length > 0) {
             const cur = stack.pop();
             component.push(cur);
-            const curRow = Math.floor(cur / size);
-            const curCol = cur % size;
+            const cr = Math.floor(cur / size);
+            const cc = cur % size;
 
             const neighbors = [
-              [curRow - 1, curCol],
-              [curRow + 1, curCol],
-              [curRow, curCol - 1],
-              [curRow, curCol + 1],
+              [cr - 1, cc],
+              [cr + 1, cc],
+              [cr, cc - 1],
+              [cr, cc + 1]
             ];
 
             neighbors.forEach(([nr, nc]) => {
@@ -396,10 +523,32 @@
       return groups;
     }
 
-    restartBtn.addEventListener("click", initGame);
+    // =========================
+    // GAME OVER
+    // =========================
 
-    // Start
+    function checkGameOver() {
+      const hasEmpty = board.some(cell => cell === null);
+      if (!hasEmpty) {
+        gameOver = true;
+        messageEl.textContent = "Keine Züge mehr! 🎁";
+        if (navigator.vibrate) navigator.vibrate(120);
+        cells.forEach(c => c.classList.add("disabled"));
+      }
+    }
+
+    restartBtn.addEventListener("click", () => {
+      // Remove listeners to avoid duplicates
+      boardEl.replaceWith(boardEl.cloneNode(true));
+      const newBoardEl = document.getElementById("board");
+      boardEl.id = ""; // old reference not used further
+      // Re-init everything
+      location.reload(); // simplest hard reset for this small game
+    });
+
+    // Start game
     initGame();
   </script>
 </body>
 </html>
+
